import React from 'react';
import {shallow} from 'enzyme';

import {ICON_DIRECTION} from 'modules/components/ExpandButton/constants';

import Pane from './Pane';
import {PANE_ID, PANE_STATE} from './constants';
import * as Styled from './styled';

describe('Pane', () => {
  const Foo = () => <div>Foo</div>;
  const mockProps = {
    expand: jest.fn()
  };

  it('should render children with paneState', () => {
    // given
    const node = shallow(
      <Pane {...mockProps} paneId={PANE_ID.TOP} paneState={PANE_STATE.EXPANDED}>
        <Foo />
      </Pane>
    );

    // then
    const FooNode = node.find(Foo);
    expect(FooNode).toHaveLength(1);
    expect(FooNode.prop('paneState')).toBe(PANE_STATE.EXPANDED);
    expect(node).toMatchSnapshot();
  });

  it("should render TopExpandButton with UP icon if pane is TOP and it's expanded", () => {
    // given
    const node = shallow(
      <Pane {...mockProps} paneId={PANE_ID.TOP} paneState={PANE_STATE.EXPANDED}>
        <Foo />
      </Pane>
    );

    // then
    const TopExpandButtonNode = node.find(Styled.TopExpandButton);
    expect(TopExpandButtonNode).toHaveLength(1);
    expect(TopExpandButtonNode.prop('iconDirection')).toBe(ICON_DIRECTION.UP);
    expect(node).toMatchSnapshot();
  });

  it("should render TopExpandButton with DOWN icon if pane is TOP and it's not expanded", () => {
    // given
    const node = shallow(
      <Pane {...mockProps} paneId={PANE_ID.TOP} paneState={PANE_STATE.DEFAULT}>
        <Foo />
      </Pane>
    );

    // then
    const TopExpandButtonNode = node.find(Styled.TopExpandButton);
    expect(TopExpandButtonNode).toHaveLength(1);
    expect(TopExpandButtonNode.prop('iconDirection')).toBe(ICON_DIRECTION.DOWN);
    expect(node).toMatchSnapshot();
  });

  it("should render BottomExpandButton with DOWN icon if pane is BOTTOM and it's expanded", () => {
    // given
    const node = shallow(
      <Pane
        {...mockProps}
        paneId={PANE_ID.BOTTOM}
        paneState={PANE_STATE.EXPANDED}
      >
        <Foo />
      </Pane>
    );

    // then
    const BottomExpandButtonNode = node.find(Styled.BottomExpandButton);
    expect(BottomExpandButtonNode).toHaveLength(1);
    expect(BottomExpandButtonNode.prop('iconDirection')).toBe(
      ICON_DIRECTION.DOWN
    );
    expect(node).toMatchSnapshot();
  });

  it("should render BottomExpandButton with UP icon if pane is BOTTOM and it's not expanded", () => {
    // given
    const node = shallow(
      <Pane
        {...mockProps}
        paneId={PANE_ID.BOTTOM}
        paneState={PANE_STATE.COLLAPSED}
      >
        <Foo />
      </Pane>
    );

    // then
    const BottomExpandButtonNode = node.find(Styled.BottomExpandButton);
    expect(BottomExpandButtonNode).toHaveLength(1);
    expect(BottomExpandButtonNode.prop('iconDirection')).toBe(
      ICON_DIRECTION.UP
    );
    expect(node).toMatchSnapshot();
  });

  describe('handleExpand', () => {
    const mockProps = {
      expand: jest.fn(),
      resetExpanded: jest.fn(),
      paneId: PANE_ID.BOTTOM
    };

    beforeEach(() => {
      mockProps.expand.mockClear();
      mockProps.resetExpanded.mockClear();
    });

    it('should call expand with paneId', () => {
      // given
      const node = shallow(<Pane {...mockProps} />);

      // when
      expect(node.instance().handleExpand());

      // then
      expect(mockProps.expand).toHaveBeenCalledWith(mockProps.paneId);
    });
  });
});
