// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pane should render BottomExpandButton with DOWN icon if pane is BOTTOM and it's expanded 1`] = `
<Styled(Panel)
  expand={[Function]}
  paneId="BOTTOM"
  paneState="EXPANDED"
>
  <Foo
    key=".0"
    paneState="EXPANDED"
  />
  <Styled(ExpandButton)
    iconDirection="DOWN"
    onClick={[Function]}
  />
</Styled(Panel)>
`;

exports[`Pane should render BottomExpandButton with UP icon if pane is BOTTOM and it's not expanded 1`] = `
<Styled(Panel)
  expand={[Function]}
  paneId="BOTTOM"
  paneState="COLLAPSED"
>
  <Foo
    key=".0"
    paneState="COLLAPSED"
  />
  <Styled(ExpandButton)
    iconDirection="UP"
    onClick={[Function]}
  />
</Styled(Panel)>
`;

exports[`Pane should render TopExpandButton with DOWN icon if pane is TOP and it's not expanded 1`] = `
<Styled(Panel)
  expand={[Function]}
  paneId="TOP"
  paneState="DEFAULT"
>
  <Foo
    key=".0"
    paneState="DEFAULT"
  />
  <Styled(ExpandButton)
    iconDirection="DOWN"
    onClick={[Function]}
  />
</Styled(Panel)>
`;

exports[`Pane should render TopExpandButton with UP icon if pane is TOP and it's expanded 1`] = `
<Styled(Panel)
  expand={[Function]}
  paneId="TOP"
  paneState="EXPANDED"
>
  <Foo
    key=".0"
    paneState="EXPANDED"
  />
  <Styled(ExpandButton)
    iconDirection="UP"
    onClick={[Function]}
  />
</Styled(Panel)>
`;

exports[`Pane should render children with paneState 1`] = `
<Styled(Panel)
  expand={[Function]}
  paneId="TOP"
  paneState="EXPANDED"
>
  <Foo
    key=".0"
    paneState="EXPANDED"
  />
  <Styled(ExpandButton)
    iconDirection="UP"
    onClick={[Function]}
  />
</Styled(Panel)>
`;
